--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             :root {
                 /*hacer un cambio en la "raiz"*/
                 --bs-body-font-family: "Alegreya Sans", sans-serif;
-                --bs-body-bg: #e9e6d8;
             }
 
             nav {
@@ -46,7 +45,7 @@
                 background-repeat: no-repeat;
             }
         </style>
-        <title>Madu Muñoz</title>
+
     </head>
     <body>
         <!-- Navigation -->
@@ -66,16 +65,16 @@
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="proyecto.index">Sobre el proyecto</a>
+                            <a class="nav-link" href="proyecto.html">Sobre el proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="participa.index">Participa</a>
+                            <a class="nav-link" href="participa.html">Participa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tarjetas.index">Tarjetas</a>
+                            <a class="nav-link" href="tarjetas.html">Tarjetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="catalogo.index">Catálogo</a>
+                            <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
                     </ul>
                 </div>
