--- a/proyecto.html
+++ b/proyecto.html
@@ -70,7 +70,7 @@
         <nav class="navbar navbar-expand-lg shadow fixed-top">
             <div class="container">
                 <div class="col-md-3 mb-2 mb-md-0">
-                    <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+                    <a href="index.html" class="d-inline-flex link-body-emphasis text-decoration-none">
                         <svg class="bi" width="40" height="32" role="img" aria-label="erase"><use xlink:href="#logo-erase" /></svg>
                     </a>
                 </div>
@@ -83,16 +83,16 @@
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="proyecto.index">Sobre el proyecto</a>
+                            <a class="nav-link" href="proyecto.html">Sobre el proyecto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="participa.index">Participa</a>
+                            <a class="nav-link" href="participa.html">Participa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tarjetas.index">Tarjetas</a>
+                            <a class="nav-link" href="tarjetas.html">Tarjetas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="catalogo.index">Catálogo</a>
+                            <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
                     </ul>
                 </div>
@@ -117,13 +117,12 @@
             <div class="container">
                 <div class="about-heading-content">
                     <div class="row">
-                        <div class="col-xl-9 col-lg-10 mx-auto">
-                            <div class="bg-faded rounded p-5">
+                            <div class="bg-faded rounded py-5">
                                 <h2 class="section-heading mb-4">
                                     <span class="section-heading-upper">Proyecto de título</span>
-                                    <span class="section-heading-lower">Diseño UC</span>
+                                    <span style="font-size: 3rem;">Diseño UC</span>
                                 </h2>
-                                <div class="col-lg-12 col-md-14">
+                                <div class="col-xl-9 col-lg-10 col-md-14">
                                     <p>
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error
                                         voluptates eius enim consequuntur!
@@ -139,9 +138,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
-                <img class="img-fluid rounded mb-3 mb-lg-0 align-items-center" src="img/foto-proyecto.png" alt="..." />
+                <img class="img-fluid rounded mb-3 mb-lg-0 align-items-center col-xl-9 col-lg-10 mx-auto" src="img/foto-proyecto.png" alt="..." />
             </div>
         </section>
 
