--- a/single.html
+++ b/single.html
@@ -47,7 +47,7 @@
         </style>
 
     </head>
-    <body>
+    <body class="bg-light">
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg shadow fixed-top">
             <div class="container">
@@ -81,60 +81,24 @@
             </div>
         </nav>
 
-        <!-- Imagen central -->
-        <header class="fondo-arriba">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center">
-                    <div class="col-12 text-left">
-                        <h1 class="fw-medium" style="color: white; font-size: 4rem;">érase</h1>
-                        <p class="lead" style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        <svg class="bi" width="24" height="24" fill="#fff"><use href="#abajo" /></svg>
-                    </div>
-                </div>
-            </div>
-        </header>
+        
 
-        <!-- Image Showcases - Esto se resolvería con un JS, no he hecho el JSON aún-->
-        <section class="showcase">
-            <div class="container-fluid p-0">
-                <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
-                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Título #1</h2>
-                        <p class="lead mb-0">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="#" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
-                    </div>
-                </div>
-                <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
-                    <div class="col-lg-6 my-auto showcase-text">
-                        <h2>Título #2</h2>
-                        <p class="lead mb-0">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="#" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
-                    </div>
-                </div>
-                <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
-                    <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Título #3</h2>
-                        <p class="lead mb-0">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="#" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
-                    </div>
-                </div>
+        <!--Sección sin identidad-->
+        <section>
+            <div class="container my-5 pt-5">
+                <div class="row row-cols-1 row-cols-lg-2 g-4" id="catalogo"></div>
             </div>
         </section>
 
-        <!-- Imagen de abajo -->
-        <header class="fondo-abajo">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center">
-                    <div class="col-12 text-center">
-                        <h1 class="fw-regular" style="color: white;">Para más títulos, <br> ¡revisa nuestro catálogo!</h1>
-                        <a href="catalogo.html" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Catálogo</a>
-                    </div>
+        <!--Complemento lateral-->
+        <aside>
+            <div class="container pb-4">
+                <div class="row">
+                    <div class="col-6" id="back"></div>
+                    <div class="col-6 text-end" id="next"></div>
                 </div>
             </div>
-        </header>
+        </aside>
 
         <!-- Footer -->
         <div class="container">
@@ -195,9 +159,37 @@
             </symbol>
         </svg>
 
-        <!-- Aquí iría un fetch de un json con los títulos-->
+        <!-- Lo que sigue es JavaScript a secas-->
+        <script>
+            //Tomo el dato que trae ?nro=
+            var n = new URLSearchParams(window.location.search).get("nro");
+            //Lo que trae ?nro= será tratado siempre como número
+            n = Number(n);
+            //crearé una función asincrónica
+            async function portfolio() {
+                const consulta = await fetch("https://raw.githubusercontent.com/MaduMunoz/erase/main/json/datos.json");
+                const data = await consulta.json();
+                const cuantos = data.length;
+                //Como n es siempre número: Ya no tengo posibilidad de null
+                document.querySelector("#catalogo").innerHTML = '<div class="col"><h2 class="fs-1">' + data[n].nombre + "</a></h2><p>" + data[n].texto + "</p><small>Por " + data[n].autor + "</small></div>";
+                //un forEach para cada foto del trabajo
+                data[n].fotos.forEach((x) => {
+                    document.querySelector("#catalogo").innerHTML += '<div class="col"><img src="' + x + '" class="w-100 rounded shadow-sm"></div>';
+                });
+                //Necesito una condición para pasar a trabajo anterior o siguiente si lo hubiera
+                if (n < 1) {
+                    document.querySelector("#next").innerHTML = '<a href="single.html?nro=' + (n + 1) + '" class="btn btn-sm btn-outline-secondary">siguiente &rarr;</a>';
+                } else if (n > 0 && n < cuantos - 1) {
+                    document.querySelector("#back").innerHTML = '<a href="single.html?nro=' + (n - 1) + '" class="btn btn-sm btn-outline-secondary">&larr; anterior</a>';
+                    document.querySelector("#next").innerHTML = '<a href="single.html?nro=' + (n + 1) + '" class="btn btn-sm btn-outline-secondary">siguiente &rarr;</a>';
+                } else {
+                    document.querySelector("#back").innerHTML = '<a href="single.html?nro=' + (n - 1) + '" class="btn btn-sm btn-outline-secondary">&larr; anterior</a>';
+                }
+            } //ahora cierro la creación de la función asincrónica
+            portfolio().catch((error) => console.error(error));
+        </script>
 
-        <!-- Biblioteca de Bootstrap JS-->
+        <!-- Lo que sigue es la biblioteca de Bootstrap-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     </body>
 </html>
