--- a/single.html
+++ b/single.html
@@ -67,12 +67,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="proyecto.html">Sobre el proyecto</a>
                         </li>
-                        <li class="nav-item">
+                        <!--<li class="nav-item">
                             <a class="nav-link" href="participa.html">Participa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="tarjetas.html">Tarjetas</a>
-                        </li>
+                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" href="catalogo.html">Catálogo</a>
                         </li>
