--- a/catalogo.html
+++ b/catalogo.html
@@ -3,8 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <!-- Primary Meta Tags -->
+        <title>érase - Proyecto de Título | Magdalena Muñoz</title>
+        <meta name="title" content="érase - Proyecto de Título | Magdalena Muñoz" />
+        <meta name="description" content="Colección de libros multimediales para niños entre 10 a 12 años.  " />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://proyecto-erase.cl/" />
+        <meta property="og:title" content="érase - Proyecto de Título | Magdalena Muñoz" />
+        <meta property="og:description" content="Colección de libros multimediales para niños entre 10 a 12 años.  " />
+        <meta property="og:image" content="https://raw.githubusercontent.com/MaduMunoz/erase/main/img/img-metadatos.png" />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="http://proyecto-erase.cl/" />
+        <meta property="twitter:title" content="érase - Proyecto de Título | Magdalena Muñoz" />
+        <meta property="twitter:description" content="Colección de libros multimediales para niños entre 10 a 12 años.  " />
+        <meta property="twitter:image" content="https://raw.githubusercontent.com/MaduMunoz/erase/main/img/img-metadatos.png" />
+
+        <!-- Meta Tags Generated with https://metatags.io -->
+        
         <title>érase - Proyecto de Título</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="img/erase-icon.svg" />
