--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Título #1</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=0" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
                     </div>
                 </div>
                 <div class="row g-0">
@@ -132,7 +132,7 @@
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Título #2</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=1" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
                     </div>
                 </div>
                 <div class="row g-0">
@@ -140,15 +140,11 @@
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Título #3</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=2" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!--<section class="showcase">
-            <div class="container-fluid p-0" id="titulos"></div>
-        </section>-->
 
         <!-- Imagen de abajo -->
         <header class="fondo-abajo">
@@ -249,53 +245,6 @@
         </svg>
 
         <!-- Aquí iría un fetch de un json con los títulos-->
-
-        <script type="text/javascript">
-            const datos = [
-                //const es para decirle al navegador que los datos no son variables. el navegador no gasta espacio para que los datos cambien.
-                {
-                    picsum: "img/foto-1.png",
-                    title: "Título #1",
-                    text: "Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-                },
-                {
-                    picsum: "img/foto-1.png",
-                    title: "Título #2",
-                    text: "Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-                },
-                {
-                    picsum: "img/foto-1.png",
-                    title: "Título #3",
-                    text: "Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
-                },
-            ];
-
-            datos.forEach((d, i) => {
-                //if (i < 3) {
-                    if (i % 2 == 0) {
-                        // par
-                        document.getElementById("titulos").innerHTML +=
-                            '<div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(' +
-                            d.picsum +
-                            ');"></div><div class="col-lg-6 order-lg-1 my-auto showcase-text"><h2>' +
-                            d.title +
-                            '</h2><p class="lead mb-0" style="font-size: 1.3rem;">' +
-                            d.text +
-                            '</p><a href="single.html?nro=" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a></div>';
-                    } else {
-                        // impar
-                        document.querySelector("#titulos").innerHTML +=
-                            '<div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url(' +
-                            d.picsum +
-                            ');"></div><div class="col-lg-6 order-lg-1 my-auto showcase-text"><h2>' +
-                            d.title +
-                            '</h2><p class="lead mb-0" style="font-size: 1.3rem;">' +
-                            d.text +
-                            '</p><a href="single.html?nro=" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a></div>';
-                    }
-                
-            });
-        </script>
 
         <!-- Biblioteca de Bootstrap JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
