--- a/index.html
+++ b/index.html
@@ -122,25 +122,25 @@
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Título #1</h2>
+                        <h2>Ágata y Ocre, el bosque encantado</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=0" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=0" title="Ágata y Ocre" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
                     <div class="col-lg-6 my-auto showcase-text">
-                        <h2>Título #2</h2>
+                        <h2>Días de oro, el océano maldito</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=1" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=1" title="Océano maldito" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/foto-1.png');"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-                        <h2>Título #3</h2>
+                        <h2>Un pacto entre unicornio y phoenix</h2>
                         <p class="lead mb-0" style="font-size: 1.3rem;">Esto es una descripción: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="single.html?nro=2" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información</a>
+                        <a href="single.html?nro=2" title="Unicornio y phoenix" class="btn btn-success rounded-pill px-3 text-uppercase" style="margin: 20px 0px;">Más información sobre este libro</a>
                     </div>
                 </div>
             </div>
@@ -243,8 +243,6 @@
                 <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
             </symbol>
         </svg>
-
-        <!-- Aquí iría un fetch de un json con los títulos-->
 
         <!-- Biblioteca de Bootstrap JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
