--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="container">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <div class="col-md-4 d-flex align-items-center">
-                    <a href="index.html" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+                    <a href="index.html" title="Pagina de Inicio" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
                         <svg class="bi" width="30" height="24" fill="#008067"><use href="#icono-erase" /></svg>
                     </a>
                     <span class="mb-3 mb-md-0 text-body-secondary"> érase, Proyecto de Título 2023 - Escuela de Diseño UC</span>
@@ -173,17 +173,17 @@
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="#">
+                        <a class="text-body-secondary" href="https://twitter.com/" target="_blank">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#twitter" /></svg>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="#">
+                        <a class="text-body-secondary" href="https://www.instagram.com/" target="_blank">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#instagram" /></svg>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="#">
+                        <a class="text-body-secondary" href="https://www.facebook.com/" target="_blank">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#facebook" /></svg>
                         </a>
                     </li>
