--- a/index.html
+++ b/index.html
@@ -173,17 +173,17 @@
 
                 <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="https://twitter.com/" target="_blank">
+                        <a class="text-body-secondary" href="https://twitter.com/" target="_blank" title="Twitter">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#twitter" /></svg>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="https://www.instagram.com/" target="_blank">
+                        <a class="text-body-secondary" href="https://www.instagram.com/" target="_blank" title="Instagram">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#instagram" /></svg>
                         </a>
                     </li>
                     <li class="ms-3">
-                        <a class="text-body-secondary" href="https://www.facebook.com/" target="_blank">
+                        <a class="text-body-secondary" href="https://www.facebook.com/" target="_blank" title="Facebook">
                             <svg class="bi" width="24" height="24" fill="#008067"><use href="#facebook" /></svg>
                         </a>
                     </li>
